--- a/Absensi APP/.env
+++ b/Absensi APP/.env
@@ -7,3 +7,11 @@ db_host  = localhost
 db_dialect = mysql
 
 private_key = jcwd
+
+url = "http://localhost:3000/forget/"
+URL_IMAGE = "http://localhost:2000/avatar/"
+
+
+
+nodemailer_email = christophercalvinprihantoro@gmail.com
+nodemailer_pass = uvllpnfhvvurfhgv  
